unpackaged/main/default/objects/Matter_Judgment_Fee_Setting__mdt/Matter_Judgment_Fee_Setting__mdt.object-meta.xml
<CustomObject>
    <description>used in 'Matter - Actions On Create' flow FSRTB-36</description>
    <label>Matter Judgment Fee Setting</label>
    <pluralLabel>Matter Judgment Fee Settings</pluralLabel>
</CustomObject>