unpackaged/main/default/objects/Matter_Judgment_Fee_Setting__mdt/fields/Baseline_Fees_Recoverable__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Fees_Recoverable__c</fullName>
    <label>Baseline Fees Recoverable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>