unpackaged/main/default/objects/Matter_Judgment_Fee_Setting__mdt/fields/Chargeoff_Amount_Min__c.field-meta.xml
<CustomField>
    <fullName>Chargeoff_Amount_Min__c</fullName>
    <label>Chargeoff Amount Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>