unpackaged/main/default/objects/Matter_Judgment_Fee_Setting__mdt/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <label>Court</label>
    <length>20</length>
    <type>Text</type>
</CustomField>