unpackaged/main/default/objects/Matter_Judgment_Fee_Setting__mdt/fields/Percent_Excess_of_Amount__c.field-meta.xml
<CustomField>
    <fullName>Percent_Excess_of_Amount__c</fullName>
    <label>Percent Excess of Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>